Change ErrorJSON struct
